update base image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   cups:
-    image: tigerj/cups-airprint:latest
+    image: pokica/cups-airprint:latest
     container_name: cups
     network_mode: host
     restart: unless-stopped
